@@ -1,0 +1,15 @@
+# ***************************************************************************************
+# Additonal proc options in Page TSconfig for Inline Elements extension
+#
+# @author	Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+#
+# TYPO3 SVN ID: $Id: pageTSConfig.txt $
+# ***************************************************************************************
+
+	## Default RTE processing rules
+RTE.default.proc {
+	
+		## DO NOT REMAP BOLD AND ITALIC TO STRONG AND EMPHASIS AND VICE VERSA
+	transformBoldAndItalicTags = 0
+	
+}
