@@ -1,3 +1,7 @@
+2008-02-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fixed bug #7602: htmlArea RTE: Make the use of extended inline elements configurable
+
 2008-02-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fixed bug #7583: htmlArea RTE should allow to markup text in absence of any block element
