@@ -1,3 +1,6 @@
+2008-02-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fixed bug #7602: htmlArea RTE: Make the use of extended inline elements configurable
 
 2008-02-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
